# dysarthria

./: .gitignore  README.md  dysarthria_pipeline_(1).ipynb  example.slurm  main-1.ipynb  pyproject.toml
config/: baseline_only.yaml  config.yaml  wav2vec2_binary_a100.yaml  wav2vec2_severity_a100.yaml  wavlm_base_plus_binary_a100.yaml  wavlm_base_plus_severity_a100.yaml  wavlm_large_binary_a100.yaml  wavlm_large_severity_a100.yaml
config/audio/: default.yaml
config/baseline/: default.yaml
config/data/: default.yaml
config/evaluation/: default.yaml
config/wav2vec/: default.yaml
outputs/: error_analysis_manifest.md
outputs/baseline_only_7414_slurm7414/: config.resolved.yaml  environment.json  training_logs.json
outputs/wav2vec2_binary_a100_2731_slurm2731/: config.composed.yaml  training_logs.json
outputs/wav2vec2_binary_a100_7227_slurm7227/: config.resolved.yaml  training_logs.json
outputs/wav2vec2_severity_a100_7396_slurm7396/: config.resolved.yaml  environment.json  training_logs.json
outputs/wavlm_base_plus_binary_a100_7228_slurm7228/: config.composed.yaml  training_logs.json
outputs/wavlm_base_plus_severity_a100_7397_slurm7397/: config.composed.yaml  (+1 more)
scripts/: download_kaggle_datasets.py  export_test_predictions.py  run_pipeline.py
slurm/: baseline_only.slurm  export_successful_run_predictions.slurm  full_pipeline.slurm  smoke_test.slurm  wav2vec2_binary_a100.slurm  wav2vec2_severity_a100.slurm  wavlm_base_plus_binary_a100.slurm  wavlm_base_plus_severity_a100.slurm  wavlm_large_binary_a100.slurm  wavlm_large_severity_a100.slurm
(+53 files in other folders)
